- alaspatial_index2 first update.
git-svn-id: http://alageospatialportal.googlecode.com/svn/branches/alaspatial-index2@743 73def43e-0e3b-11df-a5af-b38b39d06e06